# EightyEightyEmu

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h  primitives.h
rom/: roms.txt
src/: helpers.h  main.c
